--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 boto3
 fastapi==0.103.1
 mangum==0.17.0
+numpy==1.24.3
+pandas==2.2.2
+PyMuPDF==1.22.3
+python-multipart
+sentence-transformers==3.0.1
 uvicorn==0.23.2
