--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 boto3
 fastapi==0.103.1
 mangum==0.17.0
-numpy==1.24.3
-pandas==2.2.2
+numpy==1.20
+pandas==1.4
 PyMuPDF==1.22.3
 python-multipart
 sentence-transformers==3.0.1
 uvicorn==0.23.2
+huggingface_hub==0.23.4
+transformers==4.42.4
