--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-venv-
 
+      - name: Install setuptools
+        run: pip3 install setuptools
+
       - name: Activate and Install Depencies into Virtual env
         run: python -m venv venv && source venv/bin/activate &&
           pip3 install -r requirements.txt
