--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python all python version
         uses: actions/setup-python@v2
         with:
-          python-version: 3.12
+          python-version: 3.11
           architecture: x64
 
       - name: Install Python Virtual ENV
@@ -31,8 +31,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-venv-
 
-      - name: Install setuptools
-        run: pip3 install setuptools
+      # - name: Install setuptools
+      #   run: pip3 install setuptools
 
       - name: Activate and Install Depencies into Virtual env
         run: python -m venv venv && source venv/bin/activate &&
