--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,7 +28,7 @@ name: Deploy to Amazon ECR
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "feat/new-structure" ]
 
 env:
   ECR_REPOSITORY: "headwaters-backend"           # set this to your Amazon ECR repository name
